feat: Configure Babel for React and TypeScript
Integrate Babel standalone script to enable runtime transpilation of React and TypeScript code directly in the browser. This simplifies development setup by removing the need for a separate build process for certain environments.

A shim for `process.env` is also included for compatibility with browser-based execution, particularly when dealing with environment variables.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,6 +48,16 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
     </style>
+    <!-- Babel for runtime transpilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script>
+      // Shim process.env for browser compatibility with Netlify environment variables
+      window.process = {
+        env: {
+          API_KEY: undefined // This will be replaced if using a build tool or can be set via window.process.env.API_KEY
+        }
+      };
+    </script>
 <script type="importmap">
 {
   "imports": {
@@ -64,5 +73,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Entry point for the application using Babel -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="index.tsx"></script>
 </body>
 </html>
